--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       if (name.includes("A")) return {fill: "red", text: "white"};
       if (name.includes("B")) return {fill: "green", text: "white"};
       if (name.includes("C")) return {fill: "yellow", text: "black"};
-      if (name.includes("D")) return {fill: "blue", text: "black"};
+      if (name.includes("D")) return {fill: "blue", text: "white"};
       if (name.includes("E")) return {fill: "none", text: "black"};
       if (name.includes("F")) return {fill: "cyan", text: "black"};
       if (name.includes("G")) return {fill: "orange", text: "white"};
@@ -195,3 +195,4 @@
   </script>
 </body>
 </html>
+
